trunk/Archive2/53/6f2843de92450f/output
main.cpp: In function 'int main()':
main.cpp:9:43: error: 'put_time' is not a member of 'std'
     std::cout << "Today is           " << std::put_time(&tm, "%c %Z") <<'\n';
                                           ^
main.cpp:12:43: error: 'put_time' is not a member of 'std'
     std::cout << "100 months ago was " << std::put_time(&tm, "%c %Z") << '\n';
                                           ^
